syntax = "proto3";

package OrderClient;

option go_package = "order";

message CreateRequest{
  int64 Uid = 1;
  int64 Pid = 2;
  int64 Amount = 3;
  int64 Status = 4;
}
message CreateResponse{
  int64 Id = 1;
}

message UpdateRequest{
  int64 Id = 1;
  int64 Uid = 2;
  int64 Pid = 3;
  int64 Amount = 4;
  int64 Status = 5;
}
message UpdateResponse{

}

message RemoveRequest{
  int64 Id = 1;
}
message RemoveResponse{

}

message DetailRequest{
  int64 Id = 1;
}
message DetailResponse{
  int64 id = 1;
  int64 Uid = 2;
  int64 Pid = 3;
  int64 Amount = 4;
  int64 Status = 5;
}

message ListRequest{
  int64 Uid = 1;
}
message ListResponse{
  repeated DetailResponse data = 1;
}

// 订单支付
message PaidRequest {
  int64 Id = 1;
}
message PaidResponse {
}

service Order{
  rpc Create(CreateRequest) returns(CreateResponse);
  rpc Update(UpdateRequest) returns(UpdateResponse);
  rpc Remove(RemoveRequest) returns(RemoveResponse);
  rpc Detail(DetailRequest) returns(DetailResponse);
  rpc List(ListRequest) returns(ListResponse);
  rpc Paid(PaidRequest) returns(PaidResponse);
}
